@@ -62,6 +62,11 @@ t/Tags-HTML-Element-Input/05-process.t
 t/Tags-HTML-Element-Input/06-process_css.t
 t/Tags-HTML-Element-Option/01-use.t
 t/Tags-HTML-Element-Option/02-version.t
+t/Tags-HTML-Element-Option/03-new.t
+t/Tags-HTML-Element-Option/04-cleanup.t
+t/Tags-HTML-Element-Option/05-init.t
+t/Tags-HTML-Element-Option/06-process.t
+t/Tags-HTML-Element-Option/07-process_css.t
 t/Tags-HTML-Element-Select/01-use.t
 t/Tags-HTML-Element-Select/02-version.t
 t/Tags-HTML-Element-Select/03-new.t
