@@ -1,4 +1,5 @@
 0.03
+ - Add Option tests.
  - Another fix of Form processing.
  - Fix CSS processing in Form.
  - Fix doc in Form.
